# postcodes

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
postcodes/: __init__.py  command_line.py  postcodes_uk.py  uk.py
postcodes/parsers/: uk.py
postcodes/regions/: uk.py
postcodes/scripts/: postcodes.py
scripts/: postcodes
tests/: test_postcodes_uk.py
